2008-06-25  Bradley M. Kuhn  <bkuhn@ebb.org>

	* configure.ac: Now checks for touch and sets @TOUCH@.

	* debian/control.unstable (Build-Depends): Added coreutils.

	* debian/control.lenny (Build-Depends): Added coreutils.

	* debian/control.hardy (Build-Depends): Added coreutils.

	* debian/control.gutsy (Build-Depends): Added coretuils.

	* debian/control.feisty (Build-Depends): Added coreutils.

	* debian/control.etch (Build-Depends): Added coreutils.

	* debian/control.edgy (Build-Depends): Added coreutils.

	* debian/control.dapper (Build-Depends): Added coreutils.

	* debian/control (Build-Depends): Added coreutils.

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test10_neverReady): Wrote method.
	(PokerChildrenTestCase.test11_spawnInDir): Wrote method.

2008-06-19  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test03_child_kill.process_kill): Added
	check for command line output.

2008-06-15  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test06_child_kill_missing_pid.process_kill):
	Wrote method.
	(PokerChildrenTestCase.test03_child_kill.process_kill): Added
	search for verbose output.
	(PokerChildrenTestCase.test07_child_force_windows_system): Wrote
	method.
	(PokerChildrenTestCase.test08_brokenKill): Wrote method.
	(PokerChildrenTestCase.test09_brokenWaitPID.process_kill): Wrote
	method.
	(PokerChildrenTestCase.test03_child_kill.process_kill): Added
	check for savepid() output.

2008-06-14  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-currencyclient.py.in
	(FakeCurrencyClientTestCase.test05_mergeNotes.mergeNotes.validate):
	Added check for mergeNotes in verbose message output.
	(FakeCurrencyClientTestCase.getNote): Added check for _buildNote
	and getNote in verbose message output.
	(FakeCurrencyClientTestCase.test03_checkNote.checkNote): Added
	check for checkNote in verbose message output.